--- a/main.css
+++ b/main.css
@@ -1,16 +1,24 @@
 body {
-    background-color: 050505;
-    color: white;
-    font-family: 'Segoe UI', sans-serif;
-    text-rendering: optimizeLegibility;
-    justify-content: center;
-    width: 800px;
-    margin: 0 auto;
-    padding: 0;
+  background-color: #050505;
+  color: white;
+  font-family: 'Segoe UI', sans-serif;
+  text-rendering: optimizeLegibility;
+  justify-content: center;
+  width: 800px;
+  margin: 0 auto;
+  padding: 0;
 }
 
 iframe {
-    padding: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+p {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .main { padding: 40px; }
@@ -19,38 +27,40 @@ iframe {
 #top > p { margin: 0; }
 
 #archives {
-    border-style: double;
-    border-color: 303030;
-    background-color: 111111;
-    display: flex;
-    text-align: center;
-    justify-content: center;
+  border-style: double;
+  border-color: 303030;
+  background-color: 111111;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+
+abbr {
+  cursor: help;
+  text-decoration: underline;
+  text-decoration-color: #B6B6B6;
+  text-decoration-style: dotted;
 }
 
 .footer {
-    text-align: center;
+  text-align: center;
 }
 
 a:link {
-    color: powderblue;
-    background-color: transparent;
-    text-decoration: none;
-  }
+  color: powderblue;
+  background-color: transparent;
+  text-decoration: none;
+  transition: color 0.5s, background-color 0.5s;
+}
   
-  a:visited {
-    color: lightcoral;
-    background-color: transparent;
-    text-decoration: none;
-  }
+a:visited {
+  color: lightcoral;
+  background-color: transparent;
+  text-decoration: none;
+}
   
-  a:hover {
-    color: pink;
-    background-color: transparent;
-    text-decoration: underline;
-  }
-  
-  a:active {
-    color: yellow;
-    background-color: transparent;
-    text-decoration: underline;
-  }
+a:hover {
+  color: #7871AA;
+  background-color: #171717;
+  text-decoration: underline;
+}
