--- a/css/main.css
+++ b/css/main.css
@@ -6,30 +6,30 @@ body {
   justify-content: center;
   width: 800px;
   margin: 0 auto;
-  padding: 0;
+  padding: 0
 }
 
 iframe {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 4px;
-  padding-right: 4px;
+  padding-right: 4px
 }
 
 h2 {
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 0px
 }
 
 p {
   margin-top: 6px;
-  margin-bottom: 6px;
+  margin-bottom: 6px
 }
 
-.main { padding: 40px; }
+.main { padding: 40px }
 
 #top > h1,
-#top > p { margin: 0; }
+#top > p { margin: 0 }
 
 #archives {
   border-style: double;
@@ -38,7 +38,7 @@ p {
   display: flex;
   justify-content: center;
   margin-top: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 1em
 }
 
 #projectlist {
@@ -48,45 +48,41 @@ p {
   display: flex;
   justify-content: center;
   margin-top: 5px;
-  padding: 6px;
+  padding: 6px
 }
 
-#projectlist p {
-  margin: 3px;
-}
+#projectlist p { margin: 3px }
 
 abbr {
   cursor: help;
   text-decoration: underline;
   text-decoration-color: #B6B6B6;
-  text-decoration-style: dotted;
+  text-decoration-style: dotted
 }
 
 span i {
   font-size: 0.67em;
   color: #777777;
-  margin-top: 0px;
+  margin-top: 0px
 }
 
-.footer {
-  text-align: center;
-}
+.footer { text-align: center }
 
 a:link {
   color: powderblue;
   background-color: transparent;
   text-decoration: none;
-  transition: color 0.5s, background-color 0.5s;
+  transition: color 0.5s, background-color 0.5s
 }
   
 a:visited {
   color: lightcoral;
   background-color: transparent;
-  text-decoration: none;
+  text-decoration: none
 }
   
 a:hover {
   color: #7871AA;
   background-color: #171717;
-  text-decoration: underline;
+  text-decoration: underline
 }
