--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+.main { padding: 40px }
+.footer { text-align: center }
+
 body {
   background-color: #050505;
   color: white;
@@ -9,24 +12,26 @@ body {
   padding: 0
 }
 
-iframe {
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 4px;
-  padding-right: 4px
+h1 {
+  background-image: -webkit-linear-gradient(left, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent
 }
-
-h2 {
-  margin-top: 0px;
-  margin-bottom: 0px
+h2 { margin: 0 }
+iframe { padding: 8px 4px 8px 4px }
+p { margin: 6px auto 6px auto }
+abbr {
+  cursor: help;
+  text-decoration: underline;
+  text-decoration-color: #B6B6B6;
+  text-decoration-style: dotted
 }
-
-p {
-  margin-top: 6px;
-  margin-bottom: 6px
+span i {
+  font-size: 0.67em;
+  color: #777777;
+  margin: 0px auto auto auto
 }
-
-.main { padding: 40px }
 
 #top > h1,
 #top > p { margin: 0 }
@@ -40,7 +45,6 @@ p {
   margin-top: 1em;
   margin-bottom: 1em
 }
-
 #projectlist {
   border-style: dashed;
   border-color: 303030;
@@ -50,23 +54,7 @@ p {
   margin-top: 5px;
   padding: 6px
 }
-
 #projectlist p { margin: 3px }
-
-abbr {
-  cursor: help;
-  text-decoration: underline;
-  text-decoration-color: #B6B6B6;
-  text-decoration-style: dotted
-}
-
-span i {
-  font-size: 0.67em;
-  color: #777777;
-  margin-top: 0px
-}
-
-.footer { text-align: center }
 
 a:link {
   color: powderblue;
@@ -74,13 +62,11 @@ a:link {
   text-decoration: none;
   transition: color 0.5s, background-color 0.5s
 }
-  
 a:visited {
   color: lightcoral;
   background-color: transparent;
   text-decoration: none
 }
-  
 a:hover {
   color: #7871AA;
   background-color: #171717;
