--- a/css/404.css
+++ b/css/404.css
@@ -4,29 +4,27 @@ body {
   font-family: 'Segoe UI', sans-serif;
   text-rendering: optimizeLegibility;
   text-align: center;
-  max-width: 100%
-}
+  max-width: 100% }
 
 h1 {
   color: #FCD3BB;
   margin: 0;
-  padding-top: 300px
-}
+  padding-top: 300px }
 p { margin-top: 6px }
+#cheesed {
+  background-image: "../rsrc/ratstare.webp";
+}
   
 a:link {
   color: powderblue;
   background-color: transparent;
   text-decoration: none;
-  transition: color 0.5s, background-color 0.5s
-}
+  transition: color 0.5s, background-color 0.5s }
 a:visited {
   color: lightcoral;
   background-color: transparent;
-  text-decoration: none
-}
+  text-decoration: none }
 a:hover {
   color: #7871AA;
   background-color: #171717;
-  text-decoration: underline
-}
+  text-decoration: underline }
