--- a/css/friend.css
+++ b/css/friend.css
@@ -1,6 +1,12 @@
 .main { padding: 40px }
 .footer { text-align: center }
 
+abbr {
+  cursor: help;
+  text-decoration: underline;
+  text-decoration-color: #B6B6B6;
+  text-decoration-style: dotted }
+
 body {
   background-color: #050505;
   color: white;
@@ -10,107 +16,32 @@ body {
   max-width: 100%;
   width: 800px;
   margin: 0 auto;
-  padding: 0
-}
+  padding: 0 }
 
-/* Headers for friend entries */
-#alyxheader {
+.header {
   margin: 0;
-  background-image: -webkit-linear-gradient(left, #9649ad, #2f00a6);
   background-clip: text;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent
-}
-#centuryyheader {
-  margin: 0;
-  background-image: -webkit-linear-gradient(left, #ff9222, #ffd222);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent
-}
-#mayoheader {
-  margin: 0;
-  background-image: -webkit-linear-gradient(left, #9649ad, #2f00a6);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent
-}
-#papheader {
-  margin: 0;
-  background-image: -webkit-linear-gradient(left, #88074e, #fd074e);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent
-}
-#qwertyheader {
-  margin: 0;
-  background-image: -webkit-linear-gradient(left, #0505af, #0505ff);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent
-}
-
-/* Image attribute modifiers for friend pictures */
-#alyx {
-  background-color: #3b116850;
+  -webkit-text-fill-color: transparent }
+.profile {
   border-style: dotted;
   border-color: #B6B6B6;
   display: flex;
   float: right;
   width: 23%;
-  margin: 5px 10px 0px 10px
-}
-#centuryy {
-  background-color: #ffb22250;
-  border-style: dotted;
-  border-color: #B6B6B6;
-  display: flex;
-  float: right;
-  width: 23%;
-  margin: 5px 10px 0px 10px
-}
-#mayo {
-  background-color: #3b116850;
-  border-style: dotted;
-  border-color: #B6B6B6;
-  display: flex;
-  float: right;
-  width: 23%;
-  margin: 5px 10px 0px 10px
-}
-#pappy {
-  background-color: #f8074e50;
-  border-style: dotted;
-  border-color: #B6B6B6;
-  display: flex;
-  float: right;
-  width: 23%;
-  margin: 5px 10px 0px 10px
-}
-#qwerty {
-  background-color: #0505ef50;
-  border-style: dotted;
-  border-color: #B6B6B6;
-  display: flex;
-  float: right;
-  width: 23%;
-  margin: 5px 10px 0px 10px
-}
+  margin: 5px 10px 0px 10px }
 
 p { margin: 6px auto 6px auto }
 a:link {
   color: powderblue;
   background-color: transparent;
   text-decoration: none;
-  transition: color 0.5s, background-color 0.5s
-}
+  transition: color 0.5s, background-color 0.5s }
 a:visited {
   color: lightcoral;
   background-color: transparent;
-  text-decoration: none
-}
+  text-decoration: none }
 a:hover {
   color: #7871AA;
   background-color: #171717;
-  text-decoration: underline
-}
+  text-decoration: underline }
