--- a/css/goofs/trucksex.css
+++ b/css/goofs/trucksex.css
@@ -1,17 +1,22 @@
+.main { padding: 40px }
+.footer { text-align: center }
+
 body {
   background-color: #050505;
   color: white;
   font-family: 'Segoe UI', sans-serif;
+  display: flex;
   text-rendering: optimizeLegibility;
-  text-align: center;
-  max-width: 100% }
+  justify-content: center;
+  align-items: center;
+  width: 800px;
+  margin: 0 auto;
+  padding: 0; 
+  text-align: center; }
+iframe { padding: 8px 4px 8px 4px }
+p { margin: 6px auto 6px auto }
+img { width: 600px }
 
-h1 {
-  color: #FCD3BB;
-  margin: 0;
-  padding-top: 300px }
-p { margin-top: 6px }
-  
 a:link {
   color: powderblue;
   background-color: transparent;
@@ -24,4 +29,5 @@ a:visited {
 a:hover {
   color: #7871AA;
   background-color: #171717;
-  text-decoration: underline }
+  text-decoration: underline
+}
