--- a/css/friend.css
+++ b/css/friend.css
@@ -1,47 +1,16 @@
-.main { padding: 40px }
-.footer { text-align: center }
-
-abbr {
-  cursor: help;
-  text-decoration: underline;
-  text-decoration-color: #B6B6B6;
-  text-decoration-style: dotted }
-
-body {
-  background-color: #050505;
-  color: white;
-  font-family: 'Segoe UI', sans-serif;
-  text-rendering: optimizeLegibility;
-  justify-content: center;
-  max-width: 100%;
-  width: 800px;
-  margin: 0 auto;
-  padding: 0 }
-
 .header {
   margin: 0;
+  font-family: 'Courier New', Courier, monospace;
   background-clip: text;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent }
+  -webkit-text-fill-color: transparent
+}
+
 .profile {
   border-style: dotted;
   border-color: #B6B6B6;
   display: flex;
   float: right;
   width: 23%;
-  margin: 5px 10px 0px 10px }
-
-p { margin: 6px auto 6px auto }
-a:link {
-  color: powderblue;
-  background-color: transparent;
-  text-decoration: none;
-  transition: color 0.5s, background-color 0.5s }
-a:visited {
-  color: lightcoral;
-  background-color: transparent;
-  text-decoration: none }
-a:hover {
-  color: #7871AA;
-  background-color: #171717;
-  text-decoration: underline }
+  margin: 5px 10px 0px 10px
+}
